infra/order-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: micro-service-kafka-order-service 
          image: officialrashid/micro-service-kafka-order-service:v4
        
          
---
apiVersion: v1
kind: Service
metadata:
  name: micro-service-kafka-order-service 
spec:
  selector:
    app: order
  ports:
    - name: order
      protocol: TCP
      port: 6000
      targetPort: 6000
