infra/product-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  labels:
    app: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: micro-service-kafka-product-service 
          image: officialrashid/micro-service-kafka-product-service:v4 
         
          
---
apiVersion: v1
kind: Service
metadata:
  name: micro-service-kafka-product-service 
spec:
  selector:
    app: product
  ports:
    - name: product
      protocol: TCP
      port: 4000
      targetPort: 4000
