infra/user-service.yml
# user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: micro-service-kafka-user-service
          image: officialrashid/micro-service-kafka-user-service:v1 
        

---
# user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-service-kafka-user-service
spec:
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 3000
      targetPort: 3000
